[package]
name = "rustify"
version = "0.1.0"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "A Rust crate which provides an abstraction layer over HTTP REST API endpoints."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmgilman/rustify"
keywords = ["REST", "HTTP", "API", "endpoint", "client"]
categories = ["web-programming::http-client"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["blocking"] }
rustify_derive = "0.1.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.26"
url = "2.2.2"

[dev-dependencies]
derive_builder = "0.10.2"
env_logger = "0.9.0"
httpmock = "0.6.2"
serde_with = "1.9.4"
test-env-log = "0.2.7"
