[package]
name = "rustify"
version = "0.4.2"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "A Rust library for interacting with HTTP API endpoints."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmgilman/rustify"
keywords = ["REST", "HTTP", "API", "endpoint", "client"]
categories = ["web-programming::http-client"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["reqwest"]
blocking = ["reqwest/blocking"]

[dependencies]
async-trait = "0.1.51"
bytes = "1.0.1"
http = "0.2.4"
log = "0.4.14"
reqwest = { version = "0.11.4", optional = true }
rustify_derive = "0.4.2"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
serde_urlencoded = "0.7.0"
thiserror = "1.0.26"
url = "2.2.2"

[dev-dependencies]
derive_builder = "0.10.2"
env_logger = "0.9.0"
httpmock = "0.6.2"
serde_with = "1.9.4"
test-env-log = "0.2.7"
tokio = "1.10.0"
tokio-test = "0.4.2"
trybuild = "1.0.45"

[[example]]
name = "reqres1"

[[example]]
name = "reqres2"
