[package]
name = "rustify"
version = "0.6.1"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "A Rust library for interacting with HTTP API endpoints."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmgilman/rustify"
keywords = ["REST", "HTTP", "API", "endpoint", "client"]
categories = ["web-programming::http-client"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["reqwest/default-tls"]
blocking = ["reqwest/blocking"]
rustls-tls = ["reqwest/rustls-tls"]

[workspace]
members = [
    "rustify_derive",
]

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.52"
bytes = "1.1.0"
http = "1"
reqwest = { version = "0.12.2", default-features = false, optional = true }
rustify_derive = { version = "0.5.3", path = "rustify_derive" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_urlencoded = "0.7.1"
thiserror = "1.0.30"
tracing = { version = "0.1.32", features = ["log"] }
url = "2.2.2"

[dev-dependencies]
derive_builder = "0.10.2"
env_logger = "0.9.0"
httpmock = "0.6.6"
rustversion = "1"
test-log = { version = "0.2.8", features = ["trace"] }
tokio = "1.17.0"
tokio-test = "0.4.2"
tracing-subscriber = { version = "0.3.9", default-features = false, features = ["env-filter", "fmt"] }
trybuild = "1.0.56"

[[example]]
name = "reqres1"

[[example]]
name = "reqres2"
