[package]
name = "rustify_derive"
version = "0.3.0"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
description = "A derive macro for implementing an Endpoint for rustify"
license = "MIT"
repository = "https://github.com/jmgilman/rustify"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
synstructure = "0.12.5"
proc-macro2 = "1.0.28"
regex = "1.5.4"
